# neovim-cmake

./: README.md
autoload/: cmake.vim
lua/cmake/: commands.lua  config.lua  dev.lua  init.lua  project_config.lua  subcommands.lua  utils.lua
lua/telescope/_extensions/: cmake.lua
plugin/: cmake.lua  cmake.vim
samples/C project/: CMakeLists.txt
samples/C++ project/: CMakeLists.txt
samples/Qt Console Application/: CMakeLists.txt  main.cpp
samples/Qt Widgets Application/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
